addint top section and process section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,35 @@
         <link href="./css/style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        Broadway baby this is whats going down
+        <!-- Main banner -->
+        <div class="main-ban">
+            <h1 class="main-title">Broadway Design</h1>
+            <ul class="main-nav">
+                <li>Home</li>
+                <li>Process</li>
+                <li>Work</li>
+                <li>Team</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+        <!-- Process section -->
+        <div>
+            <h2>Our Process</h2>
+            <p><img src="./resources/images/identify.svg"></p>
+            <h3>Identify</h3>
+            <p>Text</p>
+            <p><img src="./resources/images/understand.svg"></p>
+            <h3>Understand</h3>
+            <p>Text</p>
+            <p><img src="./resources/images/execute.svg"></p>
+            <h3>Execute</h3>
+            <p>Text</p>
+        </div>
+        <!-- Company info-->
+        <div>
+        </div>
+        <!-- Footer -->
+        <div>
+        </div>
     </body>
 </html>
