--- a/index.html
+++ b/index.html
@@ -3,36 +3,46 @@
     <head>
         <link href="./css/style.css" type="text/css" rel="stylesheet">
     </head>
-    <body>
+    <body id="home">
         <!-- Main banner -->
         <div class="main-ban">
             <h1 class="main-title">Broadway Design</h1>
             <ul class="main-nav">
-                <li>Home</li>
-                <li>Process</li>
-                <li>Work</li>
-                <li>Team</li>
-                <li>Contact</li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#process">Process</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#team">Team</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
         <!-- Process section -->
-        <div>
-            <h2>Our Process</h2>
+        <div class="sect-two">
+            <h2 id="process">Our Process</h2>
             <p><img src="./resources/images/identify.svg"></p>
             <h3>Identify</h3>
-            <p>Text</p>
+            <p>We focus ont the most important details</p>
             <p><img src="./resources/images/understand.svg"></p>
             <h3>Understand</h3>
-            <p>Text</p>
+            <p>We study our projects inside and out</p>
             <p><img src="./resources/images/execute.svg"></p>
             <h3>Execute</h3>
-            <p>Text</p>
+            <p>We put everything we have into our work</p>
         </div>
         <!-- Company info-->
-        <div>
+        <div class="sect-three">
+            <h2 class="main-ban co-info">Designed in New York</h2>
+            <h3 id="work">Portfolio</h3>
+            <p>Coming Soon</p>
+            <h3 id="team">Team</h3>
+            <p>We're Hiring!</p>
+            <h3 id="contact">Contact</h3>
+            <p>Phone: (555)-555-5555</p>
+            <p>Email: test@example.com</p>
+            <p>Twitter: @test</p>
         </div>
         <!-- Footer -->
-        <div>
-        </div>
+        <footer class="foot">
+            <span class="copr">&copy Broadway 2016</span><a href="#home">Home</a><a href="#about">About</a><a href="#work">Work</a><a href="#team">Team</a><a href="#contact">Contact</a>
+        </footer>
     </body>
 </html>
